Fixed layout issue()

--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   width: auto;
   height: 100vh;
   background-color: #F4D04E;
